Add css to try and make the notch on active.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monarch Rest Tabs</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     </html><div class="custom-tabs">
         <div class="tab">
-            <button class="tablinks" onclick="openTab(event, 'Tab1')">Tab 1</button>
-            <button class="tablinks" onclick="openTab(event, 'Tab2')">Tab 2</button>
-            <button class="tablinks" onclick="openTab(event, 'Tab3')">Tab 3</button>
+            <button class="tablinks" onclick="openTab(event, 'Tab1')">Quiet Night</button>
+            <button class="tablinks" onclick="openTab(event, 'Tab2')">Duo</button>
+            <button class="tablinks" onclick="openTab(event, 'Tab3')">Luxe</button>
         </div>
     
         <div id="Tab1" class="tabcontent">
